tests/compile-fail/stacked_borrows/raw_tracking.stderr
error: Undefined Behavior: attempting a write access using <BORROW_IDX> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
  --> $DIR/raw_tracking.rs:LL:CC
   |
LL |     unsafe { *raw1 = 13; }
   |              ^^^^^^^^^^
   |              |
   |              attempting a write access using <BORROW_IDX> at ALLOC[$HEX], but that tag does not exist in the borrow stack for this location
   |              this error occurs as part of an access at ALLOC[$HEX..$HEX]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
help: <BORROW_IDX> was created by a retag at offsets [$HEX..$HEX]
  --> $DIR/raw_tracking.rs:LL:CC
   |
LL |     let raw1 = &mut l as *mut _;
   |                ^^^^^^
help: <BORROW_IDX> was later invalidated at offsets [$HEX..$HEX]
  --> $DIR/raw_tracking.rs:LL:CC
   |
LL |     let raw2 = &mut l as *mut _; // invalidates raw1
   |                ^^^^^^
   = note: inside `main` at $DIR/raw_tracking.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

